# SHWFS

./: .backend-features.json  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
api/: boot.ts  router.ts
api/routers/: processing.ts  system.ts
cpp/: CMakeLists.txt
cpp/include/: ao_core.h
cpp/src/: centroiding.c  control.c  dm_control.c  hysteresis.c  pipeline.c  preprocessing.c  spgd_backup.c  turbulence.c  wavefront_recon.c
cpp/wasm/: bindings.cpp  exports.c
cpp/wasm-build/: CMakeCache.txt  Makefile  cmake_install.cmake
db/: schema.ts
db/migrations/meta/: 0000_snapshot.json  _journal.json
public/: ao-pro.wasm  ao_pro_wasm.js
src/: App.tsx  config.ts  index.css
src/components/: DMActuatorMap.tsx  FITSLoader.tsx  PipelineDiagram.tsx  Sidebar.tsx  WavefrontCanvas.tsx  WavefrontVisualizer.tsx
src/components/layout/: Sidebar.tsx
src/hooks/: useSystemStatus.ts
src/lib/: ao-sim.ts  ao-wasm-bridge.ts  trpc.ts
src/pages/: Calibration.tsx  Dashboard.tsx  Docs.tsx  History.tsx  Processing.tsx  Results.tsx  SourceCode.tsx
src/providers/: QueryProvider.tsx
src/sections/landing/: HeroLanding.tsx  LandingFooter.tsx  LiveFeed.tsx  Manifesto.tsx  Modules.tsx  Publications.tsx
